--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ bld/
 [Bb]in/
 [Oo]bj/
 
+# Cake Stuff
+[Tt]ools/
+![Tt]ools/packages.config
+
 # Visual Studo 2015 cache/options directory
 .vs/
 
