--- a/engenious.nuspec
+++ b/engenious.nuspec
@@ -12,10 +12,10 @@
 
     <files>
         <!-- Lib -->
-        <file src="engenious\bin\Release\*" target="lib/net40" />
+        <file src="engenious/bin/Release/*" exclude="**/*.pdb;**/*.mdb" target="lib/net40" />
 
         <!-- ContentTool -->
-        <file src="ContentTool\bin\Release\*" target="tools/net40" />
+        <file src="ContentTool/bin/Release/*" exclude="**/*.pdb;**/*.mdb"  target="tools/net40" />
 
         <!-- Targets -->
         <file src="engenious.targets" target="build" />
