--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start || true"
   - sleep 3 # give xvfb some time to start
+  - git fetch --unshallow
 script:
   - ./build.sh
 after_failure:
