--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start || true"
   - sleep 3 # give xvfb some time to start
-  - git fetch --unshallow || true
+  - git fetch origin +refs/heads/*:refs/remotes/origin/* --unshallow || true
 script:
   - ./build.sh
 after_failure:
